Ctrl+V reports "Objects Pasted" regardless if it worked or not #39736

Closed
opened 2014-04-14 17:39:23 +02:00 by Pablo Vazquez · 6 comments
Member

System Information
Ubuntu 12.04 - nvidia GTX 650

Blender Version
Blender 2.70 release

Short description of error
Ctrl+C, Ctrl+V works for copy/pasting objects. Hitting Ctrl+V will report (on info header) "Objects were pasted" even when there were no objects copied in the first place.
It even complaints in the terminal: "Warning: Unable to open '/tmp/copybuffer.blend': No such file or directory"

It's a bit confusing because sometimes when hit Ctrl+V by mistake you wonder if any object was pasted or you forgot to copy or what.

Exact steps for others to reproduce the error
Open Blender, hit Ctrl+V.

Thanks!

**System Information** Ubuntu 12.04 - nvidia GTX 650 **Blender Version** Blender 2.70 release **Short description of error** Ctrl+C, Ctrl+V works for copy/pasting objects. Hitting Ctrl+V will report (on info header) "Objects were pasted" even when there were no objects copied in the first place. It even complaints in the terminal: "Warning: Unable to open '/tmp/copybuffer.blend': No such file or directory" It's a bit confusing because sometimes when hit Ctrl+V by mistake you wonder if any object was pasted or you forgot to copy or what. **Exact steps for others to reproduce the error** Open Blender, hit Ctrl+V. Thanks!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Bastien Montagne self-assigned this 2014-04-14 18:27:35 +02:00

This issue was referenced by blender/blender-addons-contrib@4f00737f4b

This issue was referenced by blender/blender-addons-contrib@4f00737f4b0457e31611f32bcafbf78867487c85

This issue was referenced by 4f00737f4b

This issue was referenced by 4f00737f4b0457e31611f32bcafbf78867487c85

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4f00737f4b.

Closed by commit 4f00737f4b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39736
No description provided.