Fix T39736: Ctrl+V reports "Objects Pasted" regardless if it worked or not.